# flow5

./: .gitignore  README.md  flow5.pro  package_release.ps1
API_examples/: CMakeLists.txt  fl5link.cpp
API_examples/planerun/: CMakeLists.txt  planerun.cpp
API_examples/xfoilrun/: CMakeLists.txt  xfoilrun.cpp
XFoil-lib/: XFoil-lib.pro  xfoil-lib_global.h  xfoil.cpp  xfoil.h  xfoil_params.h
fl5/: fl5.pro
fl5-app/: fl5-app.pro
fl5-app/core/: core.pri  displayoptions.cpp  displayoptions.h  fontstruct.h  saveoptions.cpp  saveoptions.h  stlreaderdlg.cpp  stlreaderdlg.h  trace.cpp  trace.h  xflcore.cpp  xflcore.h  xflsvgwriter.cpp  xflsvgwriter.h
fl5-app/globals/: aboutf5.cpp  creditsdlg.cpp  creditsdlg.h  flow5.cpp  flow5.h  globals.pri  gui_params.h  main.cpp  mainframe.cpp  mainframe.h
fl5-app/interfaces/: interfaces.pri
fl5-app/interfaces/controls/: analysisrangetable.cpp  analysisrangetable.h  controls.pri  t8rangetable.cpp  t8rangetable.h  w3dprefs.cpp  w3dprefs.h
fl5-app/interfaces/editors/: analysisseldlg.cpp  analysisseldlg.h  editobjectdelegate.cpp  editors.pri  editplrdlg.cpp  editplrdlg.h  importobjectdlg.cpp  importobjectdlg.h  objecttreeview.cpp  objecttreeview.h  rotatedlg.cpp  rotatedlg.h  scaledlg.cpp  scaledlg.h  shapedlg.cpp  shapedlg.h  translatedlg.cpp  translatedlg.h
fl5-app/interfaces/exchange/: cadexportdlg.cpp  exchange.pri  (+5 more)
fl5-app/modules/: xobjects.cpp  xobjects.h
fl5-app/options/: options.pri  prefsdlg.cpp  prefsdlg.h  saveoptionswt.cpp  saveoptionswt.h  unitswt.cpp  unitswt.h  w3dprefs.cpp
fl5-app/resources/: icons.qrc  sailimages.qrc
fl5-app/translations/: flow5_zh_CN.qm  flow5_zh_CN.ts
fl5-lib/: fl5-lib.pri  fl5-lib.pro
fl5-lib/analysis3d/: boattask.cpp  llttask.cpp  p3analysis.cpp  p3linanalysis.cpp  p3unianalysis.cpp  p4analysis.cpp  panelanalysis.cpp  planetask.cpp  task3d.cpp
fl5-lib/api/: BRepCheck_ListOfStatus.hxx  TColStd_Array1OfInteger.hxx  TColStd_Array1OfReal.hxx  TColStd_SequenceOfAsciiString.hxx  TColgp_Array1OfPnt.hxx  TColgp_Array2OfPnt.hxx  aeroforces.h  analysisrange.h  anglecontrol.h  api.cpp  api.h  apilog.h  arcspline.h  bezierspline.h  bldata.h  blxfoil.h  boat.h  boatopp.h  boatpolar.h  boattask.h  boid.h  bspline.h  bspline3d.h  cartesianframe.h  cartesianframe2d.h  constants.h  ctrlrange.h  cubicinterpolation.h  cubicspline.h  edgesplit.h  eigenvalues.h  enums_objects.h  externalsail.h  extradrag.h  fileio.h  fl5color.h  fl5core.h  fl5lib_global.h  fl5object.h  flow5events.h  (+131 more)
fl5-lib/math/: cubicinterpolation.cpp  gaussquadrature.cpp  hanning.cpp  hermiteinterpolation.cpp  mathelem.cpp  matrix.cpp  qrleastsquares.cpp  rungekutta.cpp  sgsmooth.cpp  testmatrix.cpp
fl5-lib/objects2d/: objects2d.cpp
fl5-lib/objects3d/: objects3d.cpp
fl5-lib/occ/: occ_globals.cpp  occmeshparams.cpp
fl5-lib/utils/: apilog.cpp  fileio.cpp  fl5color.cpp  fl5core.cpp  trace.cpp  units.cpp  utils.cpp
fl5-lib/xml/: xflxmlreader.cpp  xflxmlwriter.cpp  xml.pri  xml_globals.cpp
fl5/fl5/: fl5.pri
fl5/resources/: icons.qrc  images.qrc  qss.qrc
meta/doc/: releasenotes.html
meta/linux/: flow5.desktop
meta/mac/: deploy_v754.txt  info.plist
xfl/: xfl.pro
xfl/xfl/: xfl.pri
xfl/xflcore/: xflcore.cpp  xflcore.h  xflobject.h
xfl/xflobjects/: xflobjects.pri
xfl/xflocc/: occ_globals.cpp  occmeshcontrols.cpp  xflocc.pri
xfl/xflscript/: xflscriptexec.cpp
(+1408 files in other folders)
